--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
     <label for="username">Username</label>
 </div>
 <div class="input-field col s12" style="margin-top: 0">
-    <input id="password" type="password" class="validate">
+    <input id="password" type="password">
     <label for="password">Password</label>
 </div>
 <a class="waves-effect waves-light btn indigo" id="log-in-button">Log in</a>
