hardcoded click event handler

--- a/html/login.html
+++ b/html/login.html
@@ -6,4 +6,4 @@
     <input id="password" type="password">
     <label for="password">Password</label>
 </div>
-<a class="waves-effect waves-light btn indigo" id="log-in-button">Log in</a>
+<a class="waves-effect waves-light btn indigo" id="log-in-button" href="javascript:login()">Log in</a>
